config/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      # access_log:
      #   - name: envoy.access_loggers.file
      #     typed_config:
      #       "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      #       path: "/etc/envoy/logs/access.log"
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/api/" }
                        route:
                          prefix_rewrite: "/"
                          cluster: slowmo_service
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                        typed_per_filter_config:
                          envoy.filters.http.lua:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                            name: response_set_cookie.lua
                      - match: { prefix: "/" }
                        route:
                          cluster: slowmo_frontend
                    # typed_per_filter_config:
                    #   envoy.filters.http.cors:
                    #     "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                    #     allow_origin_string_match:
                    #     - prefix: "*"
                    #     allow_methods: POST, OPTIONS
                    #     allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                    #     max_age: "1728000"
                    #     expose_headers: custom-header-1,grpc-status,grpc-message
              http_filters:
                # - name: envoy.filters.http.cors
                #   typed_config:
                #     "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.lua
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                    source_codes:
                      response_set_cookie.lua:
                        inline_string: |
                          function envoy_on_response(response_handle)
                            local state = response_handle:headers():get("oauth-state")
                            if state then
                              response_handle:headers():add("set-cookie", string.format("oauth-state=%s; HttpOnly; Secure; SameSite=Strict", state))
                              response_handle:headers():remove("oauth-state")
                            end
                            local session_token = response_handle:headers():get("slowmo-session-token")
                            if session_token then
                              response_handle:headers():add("set-cookie", string.format("slowmo-session-token=%s; HttpOnly; Secure; SameSite=Strict", session_token))
                              response_handle:headers():remove("slowmo-session-token")
                            end
                          end
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: slowmo_service
      connect_timeout: 0.25s
      type: logical_dns
      # HTTP/2 support
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: slowmo-server
                    port_value: 50051
    - name: slowmo_frontend
      connect_timeout: 0.25s
      type: logical_dns
      load_assignment:
        cluster_name: cluster_1
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: slowmo-frontend
                    port_value: 5173
